@@ -181,6 +181,7 @@ namespace LinuxSampler { namespace sfz {
             CCUnit suPitchOnCC;
             CCUnit suCutoffOnCC;
             CCUnit suResOnCC;
+            CurveCCUnit suPanOnCC;
             
             EGv2Unit(SfzSignalUnitRack* rack);
             virtual void Trigger();
@@ -335,11 +336,13 @@ namespace LinuxSampler { namespace sfz {
     class EndpointUnit: public EndpointSignalUnit {
         private:
             float xfCoeff; // crossfade coefficient
+            float pitchVeltrackRatio;
             
         public:
             Voice* pVoice;
-            XFInCCUnit  suXFInCC;
-            XFOutCCUnit suXFOutCC;
+            XFInCCUnit   suXFInCC;
+            XFOutCCUnit  suXFOutCC;
+            SmoothCCUnit suPanOnCC;
 
             EndpointUnit(SfzSignalUnitRack* rack);
 
@@ -390,8 +393,11 @@ namespace LinuxSampler { namespace sfz {
             // used for optimization - contains only the ones that are modulating filter cutoff
             FixedArray<EGv2Unit*> filEGs;
             
-            // used for optimization - contains only the ones that are modulating filter cutoff
+            // used for optimization - contains only the ones that are modulating resonance
             FixedArray<EGv2Unit*> resEGs;
+            
+            // used for optimization - contains only the ones that are modulating pitch
+            FixedArray<EGv2Unit*> panEGs;
             
             
             FixedArray<LFOv2Unit*> LFOs;
